feat: Initialize core UI structure, styling, and interactive features including navigation and ranking display.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
 
     <!-- Main Content Wrapper -->
-    <main style="position: relative;">
+    <main>
 
         <!-- Main Slider Section -->
         <section class="main-slider-wrapper">
@@ -5142,7 +5142,19 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_bonterra_red.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/smile.svg" alt="Icon"> MD 추천
+                                                    <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16"
+                                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <g clip-path="url(#clip0_713_2703)">
+                                                            <path
+                                                                d="M7.99398 1.33203C4.31398 1.33203 1.33398 4.31203 1.33398 7.9987C1.33398 11.6854 4.31398 14.6654 7.99398 14.6654C11.674 14.6654 14.6673 11.6854 14.6673 7.9987C14.6673 4.31203 11.6807 1.33203 7.99398 1.33203ZM8.00065 13.332C5.05398 13.332 2.66732 10.9454 2.66732 7.9987C2.66732 5.05203 5.05398 2.66536 8.00065 2.66536C10.9473 2.66536 13.334 5.05203 13.334 7.9987C13.334 10.9454 10.9473 13.332 8.00065 13.332ZM8.66732 6.62536L9.37398 7.33203L10.0807 6.62536L10.7873 7.33203L11.494 6.62536L10.0807 5.21203L8.66732 6.62536ZM5.92065 6.62536L6.62732 7.33203L7.33398 6.62536L5.92065 5.21203L4.50732 6.62536L5.21398 7.33203L5.92065 6.62536ZM8.00065 11.6654C9.55398 11.6654 10.874 10.692 11.4073 9.33203H4.59398C5.12732 10.692 6.44732 11.6654 8.00065 11.6654Z"
+                                                                fill="currentColor" />
+                                                        </g>
+                                                        <defs>
+                                                            <clipPath id="clip0_713_2703">
+                                                                <rect width="16" height="16" fill="white" />
+                                                            </clipPath>
+                                                        </defs>
+                                                    </svg> MD 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><img
@@ -5524,7 +5536,19 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_bonterra_red.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/smile.svg" alt="Icon"> MD 추천
+                                                    <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16"
+                                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <g clip-path="url(#clip0_713_2703)">
+                                                            <path
+                                                                d="M7.99398 1.33203C4.31398 1.33203 1.33398 4.31203 1.33398 7.9987C1.33398 11.6854 4.31398 14.6654 7.99398 14.6654C11.674 14.6654 14.6673 11.6854 14.6673 7.9987C14.6673 4.31203 11.6807 1.33203 7.99398 1.33203ZM8.00065 13.332C5.05398 13.332 2.66732 10.9454 2.66732 7.9987C2.66732 5.05203 5.05398 2.66536 8.00065 2.66536C10.9473 2.66536 13.334 5.05203 13.334 7.9987C13.334 10.9454 10.9473 13.332 8.00065 13.332ZM8.66732 6.62536L9.37398 7.33203L10.0807 6.62536L10.7873 7.33203L11.494 6.62536L10.0807 5.21203L8.66732 6.62536ZM5.92065 6.62536L6.62732 7.33203L7.33398 6.62536L5.92065 5.21203L4.50732 6.62536L5.21398 7.33203L5.92065 6.62536ZM8.00065 11.6654C9.55398 11.6654 10.874 10.692 11.4073 9.33203H4.59398C5.12732 10.692 6.44732 11.6654 8.00065 11.6654Z"
+                                                                fill="currentColor" />
+                                                        </g>
+                                                        <defs>
+                                                            <clipPath id="clip0_713_2703">
+                                                                <rect width="16" height="16" fill="white" />
+                                                            </clipPath>
+                                                        </defs>
+                                                    </svg> MD 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><img
@@ -5906,7 +5930,19 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_bonterra_red.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/smile.svg" alt="Icon"> MD 추천
+                                                    <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16"
+                                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <g clip-path="url(#clip0_713_2703)">
+                                                            <path
+                                                                d="M7.99398 1.33203C4.31398 1.33203 1.33398 4.31203 1.33398 7.9987C1.33398 11.6854 4.31398 14.6654 7.99398 14.6654C11.674 14.6654 14.6673 11.6854 14.6673 7.9987C14.6673 4.31203 11.6807 1.33203 7.99398 1.33203ZM8.00065 13.332C5.05398 13.332 2.66732 10.9454 2.66732 7.9987C2.66732 5.05203 5.05398 2.66536 8.00065 2.66536C10.9473 2.66536 13.334 5.05203 13.334 7.9987C13.334 10.9454 10.9473 13.332 8.00065 13.332ZM8.66732 6.62536L9.37398 7.33203L10.0807 6.62536L10.7873 7.33203L11.494 6.62536L10.0807 5.21203L8.66732 6.62536ZM5.92065 6.62536L6.62732 7.33203L7.33398 6.62536L5.92065 5.21203L4.50732 6.62536L5.21398 7.33203L5.92065 6.62536ZM8.00065 11.6654C9.55398 11.6654 10.874 10.692 11.4073 9.33203H4.59398C5.12732 10.692 6.44732 11.6654 8.00065 11.6654Z"
+                                                                fill="currentColor" />
+                                                        </g>
+                                                        <defs>
+                                                            <clipPath id="clip0_713_2703">
+                                                                <rect width="16" height="16" fill="white" />
+                                                            </clipPath>
+                                                        </defs>
+                                                    </svg> MD 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><img
@@ -6288,7 +6324,19 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_bonterra_red.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/smile.svg" alt="Icon"> MD 추천
+                                                    <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16"
+                                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <g clip-path="url(#clip0_713_2703)">
+                                                            <path
+                                                                d="M7.99398 1.33203C4.31398 1.33203 1.33398 4.31203 1.33398 7.9987C1.33398 11.6854 4.31398 14.6654 7.99398 14.6654C11.674 14.6654 14.6673 11.6854 14.6673 7.9987C14.6673 4.31203 11.6807 1.33203 7.99398 1.33203ZM8.00065 13.332C5.05398 13.332 2.66732 10.9454 2.66732 7.9987C2.66732 5.05203 5.05398 2.66536 8.00065 2.66536C10.9473 2.66536 13.334 5.05203 13.334 7.9987C13.334 10.9454 10.9473 13.332 8.00065 13.332ZM8.66732 6.62536L9.37398 7.33203L10.0807 6.62536L10.7873 7.33203L11.494 6.62536L10.0807 5.21203L8.66732 6.62536ZM5.92065 6.62536L6.62732 7.33203L7.33398 6.62536L5.92065 5.21203L4.50732 6.62536L5.21398 7.33203L5.92065 6.62536ZM8.00065 11.6654C9.55398 11.6654 10.874 10.692 11.4073 9.33203H4.59398C5.12732 10.692 6.44732 11.6654 8.00065 11.6654Z"
+                                                                fill="currentColor" />
+                                                        </g>
+                                                        <defs>
+                                                            <clipPath id="clip0_713_2703">
+                                                                <rect width="16" height="16" fill="white" />
+                                                            </clipPath>
+                                                        </defs>
+                                                    </svg> MD 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><img
@@ -6670,7 +6718,19 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_bonterra_red.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/smile.svg" alt="Icon"> MD 추천
+                                                    <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16"
+                                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <g clip-path="url(#clip0_713_2703)">
+                                                            <path
+                                                                d="M7.99398 1.33203C4.31398 1.33203 1.33398 4.31203 1.33398 7.9987C1.33398 11.6854 4.31398 14.6654 7.99398 14.6654C11.674 14.6654 14.6673 11.6854 14.6673 7.9987C14.6673 4.31203 11.6807 1.33203 7.99398 1.33203ZM8.00065 13.332C5.05398 13.332 2.66732 10.9454 2.66732 7.9987C2.66732 5.05203 5.05398 2.66536 8.00065 2.66536C10.9473 2.66536 13.334 5.05203 13.334 7.9987C13.334 10.9454 10.9473 13.332 8.00065 13.332ZM8.66732 6.62536L9.37398 7.33203L10.0807 6.62536L10.7873 7.33203L11.494 6.62536L10.0807 5.21203L8.66732 6.62536ZM5.92065 6.62536L6.62732 7.33203L7.33398 6.62536L5.92065 5.21203L4.50732 6.62536L5.21398 7.33203L5.92065 6.62536ZM8.00065 11.6654C9.55398 11.6654 10.874 10.692 11.4073 9.33203H4.59398C5.12732 10.692 6.44732 11.6654 8.00065 11.6654Z"
+                                                                fill="currentColor" />
+                                                        </g>
+                                                        <defs>
+                                                            <clipPath id="clip0_713_2703">
+                                                                <rect width="16" height="16" fill="white" />
+                                                            </clipPath>
+                                                        </defs>
+                                                    </svg> MD 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><img
@@ -6961,6 +7021,65 @@
                             </p>
                         </div>
                     </article>
+
+                    <!-- Duplicated Cards (Line 2) -->
+                    <!-- Card 5: Dongcheon Water (Re) -->
+                    <article class="brand-card">
+                        <div class="card-img">
+                            <img src="/assets/images/e-club/e-club-thumb1.png" alt="동천수">
+                        </div>
+                        <div class="text-group">
+                            <h3 class="brand-name">동천수</h3>
+                            <p class="brand-desc">
+                                지하 200m 천연 암반에서 시작된 청정수 기업.<br>
+                                30년 넘게 '깨끗한 물'만을 연구해온 대한민국 대표 생수 브랜드.
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Card 6: Montbest (Re) -->
+                    <article class="brand-card">
+                        <div class="card-img">
+                            <img src="/assets/images/e-club/e-club-thumb2.png" alt="몽베스트">
+                        </div>
+                        <div class="text-group">
+                            <h3 class="brand-name">몽베스트</h3>
+                            <p class="brand-desc">
+                                국제 품평회가 인정한 프리미엄 워터 전문 기업.<br>
+                                글로벌 3-Star 품질 인증으로 세계 시장에서도 경쟁력을 입증한 생수 브랜드.
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Card 7: Riel Industry (Re) -->
+                    <article class="brand-card">
+                        <div class="card-img">
+                            <img src="/assets/images/e-club/e-club-thumb3.png" alt="리엘산업">
+                        </div>
+                        <div class="text-group">
+                            <h3 class="brand-name">리엘산업</h3>
+                            <p class="brand-desc">
+                                유통마진을 줄이는 직재배 · 직공급 전문 식품 기업.<br>
+                                품질 검증된 현지 농산물을 합리적인 가격으로 공급하는 B2B 중심 기업.
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Card 8: Dunkin Donuts (Re) -->
+                    <article class="brand-card">
+                        <div class="card-img">
+                            <img src="/assets/images/e-club/e-club-thumb4.png" alt="던킨도너츠">
+                        </div>
+                        <div class="text-group">
+                            <h3 class="brand-name">던킨도너츠</h3>
+                            <p class="brand-desc">
+                                45년 전통의 글로벌 베이커리·도넛 전문 기업.<br>
+                                100여 개 국가에서 사랑받는 브랜드로, 안정적 공급망과 검증된 품질을 갖춘 프랜차이즈 기업.
+                            </p>
+                        </div>
+                    </article>
+
+
                 </div>
 
                 <!-- Bottom Button -->
@@ -6984,6 +7103,14 @@
                     document.getElementById('footer-placeholder').innerHTML = data;
                 })
                 .catch(error => console.error('Error loading footer:', error));
+
+            // 브랜드관 더보기 토글 기능 (Brand Pavilion Toggle)
+            document.querySelector('.btn-brand-more').addEventListener('click', function () {
+                const zone = document.querySelector('.brand-club-zone');
+                const span = this.querySelector('span');
+                const isExpanded = zone.classList.toggle('is-expanded');
+                span.textContent = isExpanded ? '브랜드관 닫기' : '브랜드관 더보기';
+            });
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
