--- a/mobile/index.html
+++ b/mobile/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS (optional, if used for slider) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Mobile CSS -->
-    <link href="../assets/styles/mobile.css" rel="stylesheet">
+    <link href="/assets/styles/mobile.css" rel="stylesheet">
 </head>
 
 <body class="mobile-body">
@@ -24,7 +24,7 @@
                     <div class="slider-card-img-wrap">
                         <img src="/assets/images/slider/snack.png" alt="다이제">
                     </div>
-                    <div class="slider-card-body" style="background-color: #7B4B3A;"> <!-- 다이제 브라운 -->
+                    <div class="slider-card-body bg-snack">
                         <div class="text-group">
                             <h3 class="slider-title">Dr.You 다이제 초코</h3>
                             <p class="slider-desc">통밀의 고소함과 달콤한 초콜릿의 만남</p>
@@ -43,7 +43,7 @@
                     <div class="slider-card-img-wrap">
                         <img src="/assets/images/slider/beverage.png" alt="밸런스밀">
                     </div>
-                    <div class="slider-card-body" style="background-color: #B09882;"> <!-- 밸런스밀 토프 베이지 -->
+                    <div class="slider-card-body bg-beverage">
                         <div class="text-group">
                             <h3 class="slider-title">믿을 수 있는 맛, 안정적인 품질</h3>
                             <p class="slider-desc">식사 품질을 일정하게 유지하는 검증된 레시피.</p>
@@ -61,7 +61,7 @@
                     <div class="slider-card-img-wrap">
                         <img src="/assets/images/slider/juice.png" alt="신선한 주스">
                     </div>
-                    <div class="slider-card-body" style="background-color: #EE712B;"> <!-- 주스 오렌지 -->
+                    <div class="slider-card-body bg-juice">
                         <div class="text-group">
                             <h3 class="slider-title">자연의 신선함을 담은 주스</h3>
                             <p class="slider-desc">매일 아침 생기를 더해주는 상큼한 한 잔</p>
@@ -79,7 +79,7 @@
                     <div class="slider-card-img-wrap">
                         <img src="/assets/images/slider/pasta.png" alt="정통 파스타">
                     </div>
-                    <div class="slider-card-body" style="background-color: #157EB0;"> <!-- 파스타 배경 블루 매칭 -->
+                    <div class="slider-card-body bg-pasta">
                         <div class="text-group">
                             <h3 class="slider-title">정통 이탈리안 파스타의 풍미</h3>
                             <p class="slider-desc">홈파티를 완성하는 프리미엄 파스타 세트</p>
@@ -2678,10 +2678,10 @@
             <span class="label">검색</span>
         </a>
     </nav>
-    <script src="../assets/js/components/quantity-control.js"></script>
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/components/mobile-footer.js"></script>
-    <script src="../assets/js/components/favorites.js"></script>
+    <script src="/assets/js/components/quantity-control.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/components/mobile-footer.js"></script>
+    <script src="/assets/js/components/favorites.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Use .txt extension to prevent live-server from injecting script tags into the partial component
