--- a/pages/cart.html
+++ b/pages/cart.html
@@ -8,27 +8,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/styles/pc.css" rel="stylesheet">
-    <script src="/assets/js/components/quantity-control.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/components/checkbox.js"></script>
 </head>
 
 <body>
 
     <!-- 헤더 -->
     <div id="header-placeholder"></div>
-    <script>
-        // Fetch header from ../components/ since we are in /page/
-        fetch('/components/header.component.txt?v=' + new Date().getTime())
-            .then(response => response.text())
-            .then(data => {
-                let headerContent = data;
-                document.getElementById('header-placeholder').innerHTML = headerContent;
-                // Dispatch event to notify that header is loaded
-                document.dispatchEvent(new Event('headerLoaded'));
-            })
-            .catch(error => console.error('Error loading header:', error));
-    </script>
 
     <!-- Cart Page Content -->
     <main class="cart-page">
@@ -1449,22 +1434,40 @@
 
             <!-- 푸터 섹션 -->
             <div id="footer-placeholder"></div>
+
             <script>
-                // ../components/ 에서 푸터 로드 (/page/ 경로)
-                fetch('/components/footer.component.txt?v=' + new Date().getTime())
-                    .then(response => response.text())
-                    .then(data => {
-                        let footerContent = data;
-                        // 푸터 내 상대 경로 에셋 수정
-                        footerContent = footerContent.replace(/src="assets\//g, 'src="../assets/');
-                        document.getElementById('footer-placeholder').innerHTML = footerContent;
-                    })
-                    .catch(error => console.error('Error loading footer:', error));
+                function loadComponent(url, placeholderId) {
+                    fetch(url + '?v=' + new Date().getTime())
+                        .then(response => {
+                            if (!response.ok) throw new Error('Network response was not ok');
+                            return response.text();
+                        })
+                        .then(data => {
+                            // Adjust relative paths for pages in subfolders
+                            if (window.location.pathname.includes('/pages/')) {
+                                data = data.replace(/src="assets\//g, 'src="../assets/');
+                            }
+                            document.getElementById(placeholderId).innerHTML = data;
+                            if (placeholderId === 'header-placeholder') {
+                                document.dispatchEvent(new Event('headerLoaded'));
+                            }
+                            if (placeholderId === 'footer-placeholder') {
+                                document.dispatchEvent(new Event('footerLoaded'));
+                            }
+                        })
+                        .catch(error => console.error('Error loading component:', error));
+                }
+
+                loadComponent('/components/header.component.txt', 'header-placeholder');
+                loadComponent('/components/footer.component.txt', 'footer-placeholder');
             </script>
 
         </div>
     </main>
 
+    <script src="/assets/js/components/quantity-control.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/components/checkbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
