모달 구조 수정 전--

--- a/pages/search_result.html
+++ b/pages/search_result.html
@@ -507,9 +507,10 @@
                 <!-- Product 8: Bacon Sandwich -->
                 <article class="product-card state-dimmed">
                     <a href="#" class="card-thumb">
-                        <div class="card-checkbox">
+                        <!-- 품절 항목 체크박스 제거 -->
+                        <!-- <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
-                        </div>
+                        </div> -->
                         <img src="/assets/images/products/md_product_8.png" alt="Product">
                         <div class="status-overlay">
                             <p>품절</p>
